--- a/frontend/src/css/productAnalysis.css
+++ b/frontend/src/css/productAnalysis.css
@@ -83,7 +83,7 @@
   /* border: 1px solid#773131; */
   /* border: 1px solid #426f71; */
 
-  background-color: #25232338;
+  background-color: rgba(255, 255, 255, 0.057);
 }
 .offers > div > p > span {
   color: #ffffff;
@@ -207,7 +207,7 @@
 .analysis-right {
   background-color: #111827;
   width: 60%;
-  height: 100%;
+  height: 138vh;
 }
 .analysis-title {
   font-weight: 700;
