--- a/frontend/src/css/loader.css
+++ b/frontend/src/css/loader.css
@@ -80,7 +80,7 @@
   width: 70%;
   height: 70%;
   border: 5px solid;
-  border-color: #111827 transparent;
+  border-color: #fcfdff transparent;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
