--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,7 +30,6 @@ li {
 .page-content {
   /* padding: 0.5%; */
   margin: 0.5%;
-
 }
 .display-content {
   width: 95%;
@@ -49,4 +48,14 @@ li {
 }
 .display-content::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
+}
+
+@media only screen and (max-width: 600px) {
+  .sidebar-area {
+    display: none;
+    width: 0px;
+  }
+  .display-content {
+    width: 100%;
+  }
 }
