--- a/frontend/src/css/imageCarousel.css
+++ b/frontend/src/css/imageCarousel.css
@@ -33,8 +33,15 @@ a {
 .carousel__container {
   height: 100%;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 100%;
+}
+.carousel__container > img {
+  /* width: 100%; */
+  height: 100%;
 }
 .carousel__slide-list {
   height: 100%;
