--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -12,13 +12,16 @@ html, body {
     justify-content: flex-start;
     background: #f3f2f2;
 } */
-.loginpage{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  /* padding: 25%; */
+
+
+.loginpage {
+    margin-top: 15vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    /* padding: 25%; */
 }
 .session {
   /* width: 50%; */
