--- a/frontend/src/css/productAnalysis.css
+++ b/frontend/src/css/productAnalysis.css
@@ -16,11 +16,7 @@
   height: auto;
   border: 1px solid #8f44fd;
 }
-.backbtn {
-  /* background-color: rgba(118, 118, 118, 0.425); */
 
-  /* border: 4px solid grey; */
-}
 .back-btn {
   border-radius: 20%;
   width: 50px;
@@ -75,6 +71,8 @@
 }
 .offers {
   padding: 2%;
+  height: 35vh;
+  overflow: auto;
 }
 .offers > div:nth-child(2) > p {
   border-radius: 10px;
@@ -207,7 +205,7 @@
 .analysis-right {
   background-color: #111827;
   width: 60%;
-  height: 138vh;
+  height: 145vh;
 }
 .analysis-title {
   font-weight: 700;
@@ -406,5 +404,45 @@
     transform: scale(1);
     -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .ProductAnalysis {
+    width: 100%;
+    flex-direction: column;
+  }
+  .analysis-left {
+    width: 100%;
+  }
+  .analysis-right {
+    width: 100%;
+  }
+  .analysis-chart {
+    height: auto;
+  }
+  .analysis-right {
+    padding-top: 10px;
+  }
+  .analysis-title {
+    display: none;
+  }
+  .analysis-title-up {
+    background-color: #111827;
+    width: 80%;
+    padding: 20px;
+    border-radius: 10px;
+    /* color: #ffffff; */
+    color: #00adb5;
+    margin-bottom: 10px;
+    font-size: 20px;
+  }
+  .up-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .analysis-right {
+    height: 100vh;
   }
 }
