--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: "Space Mono", monospace;
+  /* font-family: "Space Mono", monospace; */
   margin: 0px;
   padding: 0px;
   /* display: flex;
