--- a/frontend/src/css/productAnalysis.css
+++ b/frontend/src/css/productAnalysis.css
@@ -213,9 +213,9 @@
   margin: 2%;
   color: #00adb5;
   margin-left: 4%;
+  height: 17%;
   /* padding-right: 20px; */
 }
-
 .but-changePeriod {
   padding: 10px;
   margin: 2%;
@@ -373,7 +373,11 @@
     opacity: 1;
   }
 }
-
+canvas {
+  width: 100% !important;
+  max-width: 800px;
+  height: auto !important;
+}
 .scale-up-top {
   -webkit-animation: scale-up-top 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: scale-up-top 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
