--- a/frontend/src/css/productCard.css
+++ b/frontend/src/css/productCard.css
@@ -3,6 +3,7 @@
   padding: 0px;
 }
 .product-card {
+  font-family: "Noto Sans", sans-serif;
   /* padding: 2px; */
   background: radial-gradient(
     circle at 10% 20%,
@@ -48,15 +49,29 @@
 }
 
 .prodcut-title {
-  padding-top: 10px;
+  /* padding-top: 10px; */
+  font-weight: 700;
+  /* font-style: italic; */
+  font-family: "Noto Sans", sans-serif;
   padding-left: 5px;
   color: #ffffff;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 18px;
   margin: 0px;
-  font-family: "Poppins", sans-serif;
+  height: 97%;
+  /* border: 2px solid; */
 }
-
+.prodcut-secondry-title {
+  text-align: right;
+  height: 46%;
+  align-items: center;
+  font-family: "Noto Sans", sans-serif;
+  justify-content: center;
+  /* border: 2px solid; */
+  color: #c0c0c0;
+  font-weight: 500;
+  font-size: 10px;
+}
 .price-flipkart,
 .price-amazon {
   margin: 2%;
@@ -96,24 +111,6 @@ li {
   color: #c0c0c0;
 }
 
-.rating {
-  margin: 10px;
-  padding: 3px;
-  color: #ffffff;
-  border-radius: 2px;
-  background-color: #e58723;
-  width: 50px;
-  height: 20px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  margin-left: 2px;
-}
-.prodcut-secondry-title {
-  font-size: 10px;
-  margin-left: 6px;
-  margin-bottom: 20px;
-}
 .actual-price {
   font-size: 10px;
   margin-left: 10px;
@@ -128,7 +125,29 @@ li {
     background-color: #111827;
     border-radius: 4px;
   }
+  .prodcut-title {
+    /* padding-top: 10px; */
+    font-weight: 700;
+    /* font-style: italic; */
+    font-family: "Noto Sans", sans-serif;
+    padding-left: 5px;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 15px;
+    margin: 0px;
+    height: 97%;
+    /* border: 2px solid; */
+  }
+  .price-flipkart img,
+  .price-amazon img {
+    margin-right: 20px;
+    width: 18px;
+    height: auto;
+  }
   .product-img {
     border-radius: 4px;
+  }
+  .details {
+    height: 108%;
   }
 }
