--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -80,8 +80,10 @@
   background-color: #00adb5;
   cursor: pointer;
 }
-.home_nav > .authentication > .buttons > .button-div > .login-button:hover {
-  transform: translate(0, 10px) 1s;
+.home_nav > .authentication > .buttons > .button-div:hover {
+  /* transform: translate(0, 10px) 1s; */
+  animation-name: shake-shake;
+  animation-duration: 0.3s;
 }
 .first_para {
   text-align: left;
@@ -165,7 +167,26 @@
   /* border: 1px solid red; */
   font-size: 50px;
 }
-
+@keyframes shake-shake {
+  0% {
+    transform: translateX(-3px);
+  }
+  20% {
+    transform: translateX(3px);
+  }
+  40% {
+    transform: translateX(-3px);
+  }
+  60% {
+    transform: translateX(3px);
+  }
+  80% {
+    transform: translateX(-3px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
 @import url("https://fonts.googleapis.com/css?family=Mukta:700");
 
 .learn-more {
