--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -1,81 +1,62 @@
-/* * {
-    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
-    font-weight: 300;
-    margin: 0;
-}
-html, body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0 0;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    background: #f3f2f2;
-} */
-
 .loginpage {
-  margin-top: 15vh;
+  /* margin-top: 15vh; */
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
+  background-color: #111827;
+  overflow: hidden;
+
   /* padding: 25%; */
 }
-.session {
-  /* width: 50%; */
-  /* position: absolute; */
-  /* top: 20%; */
-  /* margin: 25%; */
-  width: 20%;
-  /* left: 35%; */
-  z-index: 4;
+* {
+  color: #fff;
 }
-/* .session::before {
-  content: "";
-  background: rgb(37, 36, 36);
-  position: fixed;
-  opacity: 0.3;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-} */
+.session {
+  width: 20%;
+  z-index: 4;
+  background-color: #111827;
+}
 h4 {
   font-size: 24px;
   font-weight: 600;
-  color: #000;
+  color: #ffffff;
   opacity: 0.85;
 }
 label {
   font-size: 12.5px;
-  color: #000;
+  color: #ffffff;
   opacity: 0.8;
   font-weight: 400;
 }
 form {
+  height: 100vh;
   padding: 40px 30px;
-  background: #fefefe;
+  background: #f1f1f10d;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-bottom: 20px;
-  width: 300px;
+  width: 25vw;
 }
 form h4 {
   margin-bottom: 20px;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgb(255 255 255);
 }
 form h4 span {
-  color: rgba(0, 0, 0, 1);
+  color: #00adb5;
   font-weight: 700;
 }
 form p {
   line-height: 155%;
   margin-bottom: 5px;
   font-size: 14px;
-  color: #000;
+  color: #fff;
   opacity: 0.65;
   font-weight: 400;
   max-width: 200px;
@@ -102,7 +83,7 @@ a.discrete:hover {
   text-align: center;
   padding: 15px 40px;
   margin-top: 5px;
-  background-color: #b08bf8;
+  background-color: #00adb5;
   color: #fff;
   font-size: 14px;
   margin-left: auto;
@@ -154,7 +135,9 @@ input:focus {
 .floating-label input {
   width: calc(100% - 44px);
   margin-left: auto;
+  color: #00adb5;
   display: flex;
+  background-color: #f0f8ff00;
 }
 .floating-label .icon {
   position: absolute;
@@ -185,7 +168,7 @@ input:focus {
   opacity: 1;
 }
 .floating-label input:valid:not(:placeholder-shown) + label + .icon svg path {
-  fill: #b69de6;
+  fill: #00adb5;
 }
 .floating-label input:not(:valid):not(:focus) + label + .icon {
   animation-name: shake-shake;
@@ -215,22 +198,79 @@ input:focus {
   display: flex;
   flex-direction: row;
   width: auto;
-  height: auto;
+  height: 100vh;
   margin: auto auto;
-  background: #fff;
+  background-color: #111827;
   border-radius: 4px;
   box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
 }
-.left {
-  width: 220px;
-  height: auto;
-  min-height: 100%;
-  position: relative;
-  background-image: url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-  background-size: cover;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+
+.sidepart {
+  width: 75vw;
+  height: 100vh;
+  background-color: #111827;
 }
+.logo_part {
+  margin-bottom: 10vh;
+}
+.logo_part > img {
+  width: 80%;
+}
+/* for the pen */
+html,
+body {
+  margin: 0;
+  min-height: 100%;
+  background-color: #f2f2f2;
+}
+
+/* waves */
+.ocean {
+  height: 80px; /* change the height of the waves here */
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  overflow-x: hidden;
+}
+
+.wave {
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23003F7C'/%3E%3C/svg%3E");
+  position: absolute;
+  color: #00adb5;
+  width: 200%;
+  height: 100%;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+}
+
+.wave:nth-of-type(2) {
+  bottom: 0;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.5;
+}
+
+.wave:nth-of-type(3) {
+  bottom: 0;
+  animation: wave 20s -1s linear infinite;
+  opacity: 0.5;
+}
+
+@keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
 .left svg {
   height: 40px;
   width: auto;
@@ -251,7 +291,12 @@ input:focus {
 }
 
 @media only screen and (max-width: 600px) {
-  .left {
+  .sidepart {
     display: none;
+  }
+  form {
+    width: 85vw;
+    background: #f1f1f100;
+
   }
 }
