--- a/frontend/src/css/Newcomp.css
+++ b/frontend/src/css/Newcomp.css
@@ -7,6 +7,7 @@
   background-color: #111827e1;
   border-radius: 5px;
   margin: 1%;
+  /* margin-top: 10px; */
   height: 10vh;
   transition: height 1s;
 }
@@ -166,6 +167,9 @@
   }
   .plus {
     height: 15%;
+  }
+  .NewComp {
+    margin-top: 10px;
   }
   .create-new-para {
     font-size: 20px;
