--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -289,7 +289,10 @@ body {
 .display-none {
   display: none;
 }
-
+.blinker-span {
+  color: #ffffff;
+  font-size: 10px;
+}
 @media only screen and (max-width: 600px) {
   .sidepart {
     display: none;
