--- a/frontend/src/css/productAnalysis.css
+++ b/frontend/src/css/productAnalysis.css
@@ -4,6 +4,7 @@
   /* position: relative; */
   /* left: 0px; */
   /* top: 0px; */
+  margin-top: 2%;
   display: flex;
   height: auto;
   flex-direction: row;
