--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -69,7 +69,7 @@
 }
 
 .home_nav > .authentication > .buttons > .button-div > .login-button {
-  width: 100%;
+  width: 110px;
   height: 100%;
   border: none;
   border-radius: 23px;
