--- a/frontend/src/css/badge.css
+++ b/frontend/src/css/badge.css
@@ -4,7 +4,8 @@
   position: fixed;
   top: 20vh;
   left: 30%;
-  height: 23vh;
+  /* height: 23vh; */
+  height: auto;
   background-color: #111827;
   z-index: 10;
   flex-direction: column;
@@ -39,6 +40,8 @@
   background-color: #5455572f;
   margin-bottom: 10px;
   align-items: center;
+  height: auto;
+  margin-top: 10px;
 }
 
 .badge .loader2 {
@@ -65,11 +68,13 @@
   display: flex;
   align-items: center;
   justify-content: right;
+  /* height: auto;
+margin-top: 10px; */
   /* border: 2px solid rgb(69, 64, 64); */
 }
 .second_cont div {
   width: 20%;
-  height: 90%;
+  height: 27px;
   border-radius: 5px;
   /* padding: 10px; */
   color: #111827;
@@ -166,12 +171,24 @@
     border-radius: 10px;
     z-index: 5;
     padding: 5px;
+    height: auto;
     border: 1px solid #00adb5;
+  }
+  #badge::before {
+    content: "";
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #272d39b1;
   }
   .badge-message > p {
     font-size: 20px;
   }
   .badge > .first_cont {
     height: auto;
+    margin-top: 10px;
   }
 }
