try for build error

--- a/frontend/src/css/sideBar.css
+++ b/frontend/src/css/sideBar.css
@@ -126,7 +126,7 @@
   padding: -1px;
   justify-content: flex-start;
   padding-left: 6px;
-  width: 3%;
+  width: 50px;
 
   border-radius: 6px;
   /* width: 100%; */
