some new changes

--- a/BackEnd/mail/views/email.handlebars
+++ b/BackEnd/mail/views/email.handlebars
@@ -119,7 +119,7 @@
               >
                 <p style="margin: 0;">Tap the button below to confirm your email
                   address. If you didn't create an account with
-                  <a href="https://blogdesire.com">Scrape</a>, you can safely
+                  <a href={process.env.front_Origin}>Scrape</a>, you can safely
                   delete this email.</p>
               </td>
             </tr>
