--- a/frontend/src/css/badge.css
+++ b/frontend/src/css/badge.css
@@ -32,12 +32,12 @@
   background-color: #272d39b1;
 } */
 .badge > .first_cont {
-  padding: 5px;
+  padding: 10px;
   display: flex;
   height: 40%;
   width: 90%;
   border-radius: 10px;
-  background-color: #5455572f;
+  background-color: #5455571c;
   margin-bottom: 10px;
   align-items: center;
   height: auto;
@@ -62,11 +62,19 @@
 .badge-message > p {
   font-size: 25px;
 }
+.badge-message-2 {
+  background-color: #5455572f;
+  border-radius: 5px;
+  width: 90%;
+  margin-bottom: 8px;
+  padding: 10px;
+}
 .badge > .second_cont {
   height: 25%;
   width: 90%;
   display: flex;
   align-items: center;
+
   justify-content: right;
   /* height: auto;
 margin-top: 10px; */
