--- a/frontend/src/css/productAnalysis.css
+++ b/frontend/src/css/productAnalysis.css
@@ -451,3 +451,40 @@ canvas {
     height: 100vh;
   }
 }
+
+
+
+/* go to the site part  */
+        
+/* .bubble5 {
+  position: relative;
+  width: 30px;
+  height: 10px;
+  padding: 5px;
+  color: #32557f;
+  border-radius: 5px;
+  border: 3px solid #32557f;
+
+  &::before,
+  &::after {
+    content: '\0020';
+    display: block;
+    position: absolute;
+    top: -15px;
+    left: 15px;
+    z-index: 2;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    border: solid 15px transparent;
+    border-top: 0;
+    border-bottom-color: #7eb4e2;
+  }
+
+  &::before {
+    top: -18px;
+    z-index: 1;
+    border-bottom-color: #32557f;
+  }
+} */
+    
