--- a/frontend/src/css/imageCarousel.css
+++ b/frontend/src/css/imageCarousel.css
@@ -42,6 +42,7 @@ a {
 .carousel__container > img {
   /* width: 100%; */
   height: 100%;
+  max-width: 100%;
 }
 .carousel__slide-list {
   height: 100%;
